--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body, html {
-    height: 100%;
+    height: 120%;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(to right, #1d0294, #b9b0e2); /* Gradiente azul para branco */
+    font-family: 'Barlow', sans-serif;
 }
 
 .head {
